--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@
 趣味 旅行/ゲーム/読書
  "/>
 <meta name="application-name" content="Ryutaro note">
-<meta name="apple-mobile-web-app-title" content="Ryutaro note"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="https://ryutaro-a.github.io/ryutaro1104/images/image.png"><link rel="apple-touch-icon" sizes="180x180" href="https://ryutaro-a.github.io/ryutaro1104/apple-touch-icon.png"><link rel="mask-icon" href="https://ryutaro-a.github.io/ryutaro1104/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="https://ryutaro-a.github.io/ryutaro1104/site.webmanifest"><link rel="canonical" href="https://ryutaro-a.github.io/ryutaro1104/about/" /><link rel="prev" href="https://ryutaro-a.github.io/ryutaro1104/offline/" /><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/about.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/page.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/home.min.css"><script type="application/ld+json">
+<meta name="apple-mobile-web-app-title" content="Ryutaro note"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="https://ryutaro-a.github.io/ryutaro1104/images/image.png"><link rel="apple-touch-icon" sizes="180x180" href="https://ryutaro-a.github.io/ryutaro1104/apple-touch-icon.png"><link rel="mask-icon" href="https://ryutaro-a.github.io/ryutaro1104/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="https://ryutaro-a.github.io/ryutaro1104/site.webmanifest"><link rel="canonical" href="https://ryutaro-a.github.io/ryutaro1104/about/" /><link rel="prev" href="https://ryutaro-a.github.io/ryutaro1104/slides/" /><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/about.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/page.min.css"><link rel="stylesheet" href="https://ryutaro-a.github.io/ryutaro1104/css/home.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "BlogPosting",
@@ -46,7 +46,7 @@
             <a href="https://ryutaro-a.github.io/ryutaro1104/" title="Ryutaro note">Ryutaro note</a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item active" href="https://ryutaro-a.github.io/ryutaro1104/about/"> About </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/categories/"> Categories </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/tags/"> Tags </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item active" href="https://ryutaro-a.github.io/ryutaro1104/about/"> About </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/slides/"> Slides </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/categories/"> Categories </a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/tags/"> Tags </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="Search titles or contents..." id="search-input-desktop">
                         <a href="#" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw"></i>
@@ -89,7 +89,7 @@
                     <a href="#" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/about/" title="">About</a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/categories/" title="">Categories</a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/tags/" title="">Tags</a><div class="menu-item"><a href="https://ryutaro-a.github.io/ryutaro1104/index.xml" title="RSS"><i class="fas fa-rss fa-fw" title="RSS"></i> </a>
+                </div><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/about/" title="">About</a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/slides/" title="">Slides</a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/categories/" title="">Categories</a><a class="menu-item" href="https://ryutaro-a.github.io/ryutaro1104/tags/" title="">Tags</a><div class="menu-item"><a href="https://ryutaro-a.github.io/ryutaro1104/index.xml" title="RSS"><i class="fas fa-rss fa-fw" title="RSS"></i> </a>
                 <span>&nbsp;|&nbsp;</span><a href="javascript:void(0);" class="theme-switch" title="Switch Theme">
                     <i class="fas fa-adjust fa-fw"></i>
                 </a>
